Add image of myself and change addRandomGreeting function to display random facts about me

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -8,9 +8,11 @@
   </head>
   <body>
     <div id="content">
-      <h1>My Portfolio</h1>
+      <h1>Vivian's Portfolio</h1>
       <p>This is my portfolio.</p>
-      <p>Click here to get a random message:</p>
+      <p>I am a 2020 STEP intern at Google on the ChromeOS team. My hobbies are surfing and cooking! :)</p>
+      <img src="images/me.jpg" alt="Picture of Me" style="width:300px;height:300px;">
+      <p>Click here to get a random fact about me:</p>
       <button onclick="addRandomGreeting()">Hello</button>
       <div id="greeting-container"></div>
     </div>
