Add some paragraphs about me with subheadings

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -2,19 +2,35 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>My Portfolio</title>
+    <title>Vivian's Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
   <body>
     <div id="content">
       <h1>Vivian's Portfolio</h1>
-      <p>This is my portfolio.</p>
-      <p>I am a 2020 STEP intern at Google on the ChromeOS team. My hobbies are surfing and cooking! :)</p>
+      <p>This is me :)</p>
       <img src="images/me.jpg" alt="Picture of Me" style="width:300px;height:300px;">
       <p>Click here to get a random fact about me:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
+      <button onclick="addRandomFact()">Click!</button>
       <div id="greeting-container"></div>
+      <h2>About Me</h2>
+      <h3>What Do I Study?</h3>
+      <p>I am a student at the University of Sydney, and I just finished my third year 
+          of a Combined Bachelor of Engineering (Software) and Science degree. 
+      </p>
+      <h3>Google Experience</h3>
+      <p>I am a 2020/2021 STEP intern at Google on the ChromeOS team. This is my 
+          first internship so I am very excited! My hosts are Austin, Eizan, Daniel 
+          and Thanh and my pod interns are Anna and Therese.
+      </p>
+      <h3>Hobbies and Interests</h3>
+      <p>I love going to the beach and recently my boyfriend has been teaching 
+          me how to surf. I aim to improve over the summer and be able to catch 
+          waves on my own. 
+      </p>
+      <p>I also enjoy cooking with my brother. We love making pastas and baking 
+          various treats.</p>
     </div>
   </body>
 </html>
