Add projects I've worked on and links to LinkedIn and GitHub profiles

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -30,7 +30,26 @@
           waves on my own. 
       </p>
       <p>I also enjoy cooking with my brother. We love making pastas and baking 
-          various treats.</p>
+        various treats.</p>
+      <h2>Projects I've Worked On</h2>
+      <h3>Rocketry</h3>
+      <p>At the beginning of this year, I joined the USYD Rocketry society and 
+          have been working on the Technical Payload team. This has been a
+          great experience for me to work along-side fellow univeristy students
+          on an extracurricular project that I am interested in. Most of my work 
+          on this team has focused on writing and testing Arduino code for the 
+          various components in the system. 
+      </p>
+      <h3>Simplified Version Control System</h3>
+      <p>For one of my units of study in semester 1 in this year, I worked on 
+          creating a simplified VCS similar to Git. This was relatively challenging
+          however after completing the assignment, I had a much better understanding
+          of VCSs. 
+      </p>
+      <h2>Links</h2>
+      <a href="https://www.linkedin.com/in/vivian-ho-7b857a198/">LinkedIn</a>
+      <br>
+      <a href="https://github.com/vivianho18">GitHub</a>
     </div>
   </body>
 </html>
