Format colour and alignment of elements, also add emojis

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -8,13 +8,16 @@
   </head>
   <body>
     <div id="content">
-      <h1>Vivian's Portfolio</h1>
-      <p>This is me :)</p>
-      <img src="images/me.jpg" alt="Picture of Me" style="width:300px;height:300px;">
+      <h1 style="text-align:center;"> &#128032 &#127774 &#127797 &#127800 &#128293
+        Vivian's Portfolio 
+        &#128293 &#127800 &#127797 &#127774 &#128032 </h1>
+      <p style="text-align:center"><i>This is me :)</i></p>
+      <img src="images/me.jpg" alt="Picture of Me" style="width:300px;height:300px;" 
+      class="center" title="This is me :)">
       <p>Click here to get a random fact about me:</p>
       <button onclick="addRandomFact()">Click!</button>
       <div id="greeting-container"></div>
-      <h2>About Me</h2>
+      <h2 style="background-color:tomato">About Me</h2>
       <h3>What Do I Study?</h3>
       <p>I am a student at the University of Sydney, and I just finished my third year 
           of a Combined Bachelor of Engineering (Software) and Science degree. 
@@ -31,7 +34,7 @@
       </p>
       <p>I also enjoy cooking with my brother. We love making pastas and baking 
         various treats.</p>
-      <h2>Projects I've Worked On</h2>
+      <h2 style="background-color:orange">Projects I've Worked On</h2>
       <h3>Rocketry</h3>
       <p>At the beginning of this year, I joined the USYD Rocketry society and 
           have been working on the Technical Payload team. This has been a
@@ -46,10 +49,11 @@
           however after completing the assignment, I had a much better understanding
           of VCSs. 
       </p>
-      <h2>Links</h2>
-      <a href="https://www.linkedin.com/in/vivian-ho-7b857a198/">LinkedIn</a>
+      <h2 style="background-color:yellow">Links</h2>
+      <li><a href="https://www.linkedin.com/in/vivian-ho-7b857a198/">LinkedIn</a></li>
       <br>
-      <a href="https://github.com/vivianho18">GitHub</a>
+      <li><a href="https://github.com/vivianho18">GitHub</a></li>
+      <h2 style="background-color:mediumseagreen">Places I've Been</h2>
     </div>
   </body>
 </html>
