Add link to Europe travel page with images from the trip

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -54,6 +54,13 @@
       <br>
       <li><a href="https://github.com/vivianho18">GitHub</a></li>
       <h2 style="background-color:mediumseagreen">Places I've Been</h2>
+      
+      <h3><a href="europe.html">Europe 2019<a/></h3>
+      <p>In the June/July holidays of 2019, I travelled around Europe with my highschool
+          friends for a month. We visited 6 countries in total - Portugal, Germany, 
+          Netherlands, Budapest, Italy and Croatia.
+      </p> 
+      <p>Click the link to see photos!</p>
     </div>
   </body>
 </html>
