Fix pull request changes

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -50,12 +50,12 @@
           of VCSs. 
       </p>
       <h2 style="background-color:yellow">Links</h2>
-      <li><a href="https://www.linkedin.com/in/vivian-ho-7b857a198/">LinkedIn</a></li>
-      <br>
-      <li><a href="https://github.com/vivianho18">GitHub</a></li>
+      <ul>
+          <li><a href="https://www.linkedin.com/in/vivian-ho-7b857a198/">LinkedIn</a></li>
+          <li><a href="https://github.com/vivianho18">GitHub</a></li>
+      </ul>
       <h2 style="background-color:mediumseagreen">Places I've Been</h2>
-      
-      <h3><a href="europe.html">Europe 2019<a/></h3>
+      <h3><a href="europe.html">Europe 2019</a></h3>
       <p>In the June/July holidays of 2019, I travelled around Europe with my highschool
           friends for a month. We visited 6 countries in total - Portugal, Germany, 
           Netherlands, Budapest, Italy and Croatia.
