--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -61,6 +61,8 @@
           Netherlands, Budapest, Italy and Croatia.
       </p> 
       <p>Click the link to see photos!</p>
+      <h2 style="background-color:skyblue">Data Servlet</h2>
+      <a href="/data">Data servlet link</a>
     </div>
   </body>
 </html>
