Fetch hardcoded message from server

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -62,7 +62,10 @@
       </p> 
       <p>Click the link to see photos!</p>
       <h2 style="background-color:skyblue">Data Servlet</h2>
-      <a href="/data">Data servlet link</a>
+      <p>Click the button to fetch a message from the server!</p>
+      <button onclick="getMessageFromServer()">Fetch!</button>
+      <div id="message-container"></div>
+      <br>
     </div>
   </body>
 </html>
