Fetch hard coded comments in JSON format and add to HTML page

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -62,9 +62,9 @@
       </p> 
       <p>Click the link to see photos!</p>
       <h2 style="background-color:skyblue">Data Servlet</h2>
-      <p>Click the button to fetch a message from the server!</p>
-      <button onclick="getMessageFromServer()">Fetch!</button>
-      <div id="message-container"></div>
+      <p>Click the button to fetch comments from the server!</p>
+      <button onclick="getCommentsFromServer()">Fetch!</button>
+      <div id="comment-container"></div>
       <br>
     </div>
   </body>
