Add select element to HTML so users can choose how many comments to show

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -71,6 +71,12 @@
         <input type="submit" value="Post">
       </form>
       <h3>Past Comments</h3>
+      <label for="num-comments">Show:</label>
+      <select name="num-comments" id="num-comments">
+        <option value="10">10</option>
+        <option value="20">20</option>
+        <option value="30">30</option>
+      </select>
       <p id="comment-container"></p>
       <br>
     </div>
