--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -77,6 +77,8 @@
         <option value="4">4</option>
         <option value="6">6</option>
       </select>
+      <br><br>
+      <button onclick="deleteComments()">Delete Comments</button>
       <p id="comment-container"></p>
       <br>
     </div>
