Style map using Cloud-based tooling

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Vivian's Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCy0lfm1q0m9beirXgwL_BOWdCRt5Z1Msk"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCy0lfm1q0m9beirXgwL_BOWdCRt5Z1Msk&map_ids=c41864c7bb66540a"></script>
     <script src="script.js"></script>
   </head>
   <body onload="getCommentsFromServer(); createMap();">
