Copy Marker.java class from example and add to new directory named data

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -83,6 +83,7 @@
       <p id="comment-container"></p>
       <br>
       <h2 style="background-color:violet">Map Feature!</h2>
+      <p>Click on the map to add markers :)</p><br>
       <div id="map"></div>
     </div>
   </body>
