Remove name input in comment form and show user's email next to their comment instead

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -66,8 +66,8 @@
       <h3>Post a comment!</h3>
       <p id='login-or-logout-prompt'></p>
       <form id="comment-form" action="/comments" method="POST">
-        <p>Your name:</p>
-        <input type="text" id="name" name="name"><br>
+        <!-- <p>Your name:</p>
+        <input type="text" id="name" name="name"><br> -->
         <p>Type your comment here:</p>
         <input type="text" id="content" name="content"><br><br>
         <input type="submit" value="Post">
